<resources>
    <string name="app_name">Viva</string>
    <string name="action_settings">Settings</string>

    <!-- Intro Screen -->
    <string name="intro_photo_list">Photo List</string>
    <string name="intro_photo_list_desc">Check this awesome photo list especially chosen for you.</string>
    <string name="intro_photo_details">Photo Details</string>
    <string name="intro_photo_details_desc">Select a photo and see all details (photographer, caption and likes).</string>
    <string name="intro_favourite_photo">Favourite Photo</string>
    <string name="intro_favourite_photo_desc">Tag your favourite photos just by clicking on the heart</string>

    <!-- Login Screen -->
    <string name="title_activity_login">Login</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="error_invalid_password">Invalid Password</string>
    <string name="error_wrong_credentials">Wrong Credentials, please try again</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="action_sign_in">Sign-in</string>


    <!-- Photo Posts -->
    <string name="title_activity_photo_posts">Photo Posts</string>
    <string name="photo_post_no_photos">No photos to show.</string>
    <string name="ask_logoff">Are you sure you want to logoff?</string>
    <string name="ask_save_photo">Do you want to save this photo to your gallery?</string>
    <string name="success_save_photo">Photo saved to your gallery.</string>

    <!-- Photo Details -->
    <string name="details">Details</string>
    <string name="caption">Caption</string>
    <string name="by_photographer">by %s</string>
    <string name="favourite">favourite</string>

    <!-- common -->
    <string name="error_unknown_error">An error occurred please try again.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
