<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dms.viva.ui.photos.PhotosActivity">
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:icon="@drawable/ic_exit_to_app_white_24dp"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
</menu>
