<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/photo_detail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="1dp">

    <ImageView
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:contentDescription="@string/caption"
        android:scaleType="fitXY" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_gravity="bottom"
        android:background="#4d000000"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingEnd="4dp"
        android:paddingStart="4dp">

        <TextView
            android:id="@+id/photographer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="12sp"
            tools:text="by Sam" />

        <TextView
            android:id="@+id/caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="12sp"
            tools:text="Creator of All" />

    </LinearLayout>

</FrameLayout>